[package]
name = "news-backend"
version = "0.1.0"
authors = ["dasinlsb <399359237@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.5"
reqwest = "0.9.18"
scraper = "0.10.1"
hyper = "0.13.1"
chrono = "0.4"

[dependencies.diesel]
version = "1.4.1"
features = ["postgres", "chrono"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]